Web Inspector: No response body available for cached resource requests with error status codes. https://bugs.webkit.org/show_bug.cgi?id=84265

Source/WebCore:

Reviewed by Pavel Feldman.

InspectorResourceAgent now saves failed subresource request response body in its cache.
Saved data is shown on front-end.

Test: http/tests/inspector/network/network-image-404.html

* inspector/InspectorResourceAgent.cpp:
(WebCore::InspectorResourceAgent::didReceiveData):
* inspector/NetworkResourcesData.cpp:
(WebCore::NetworkResourcesData::responseReceived):
(WebCore::NetworkResourcesData::httpStatusCode):
(WebCore):
* inspector/NetworkResourcesData.h:
(WebCore::NetworkResourcesData::ResourceData::httpStatusCode):
(WebCore::NetworkResourcesData::ResourceData::setHTTPStatusCode):
(ResourceData):
(NetworkResourcesData):
* inspector/front-end/RequestView.js:
(WebInspector.RequestView.hasTextContent):

LayoutTests:

* http/tests/inspector/network/network-image-404-expected.txt: Added.
* http/tests/inspector/network/network-image-404.html: Added.
* http/tests/inspector/network/resources/404.php: Added.

Canonical link: https://commits.webkit.org/101828@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@114626 268f45cc-cd09-0410-ab3c-d52691b4dbfc