third_party/WebKit/Source/WebCore/inspector/front-end/RequestView.js
@@ -59,7 +59,7 @@ WebInspector.RequestView.hasTextContent = function(request)
 {
     if (request.type.isTextType())
         return true; 
-    if (request.type === WebInspector.resourceTypes.Other)
+    if (request.type === WebInspector.resourceTypes.Other || request.hasErrorStatusCode())
         return request.content && !request.contentEncoded;
     return false;
 }
