LayoutTests/http/tests/inspector/network/resources/404.php
@@ -1,0 +1,4 @@
+<?php
+    header("HTTP/1.0 404 Not Found");
+    echo("404 - resource was not found.");
+?>
